--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,13 +8,27 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  
-<% flash.each do |name,msg| %>
-  <div class="flash_<%=name%>">
-    <%= msg %>
+
+  <div class="navbar">
+    <div class="navbar-inner">
+      <div class="container">
+        <%= link_to root_path, class: 'brand' do %>
+          <%= image_tag "books.png", width: '20px' %>
+          Library
+        <% end %>
+      </div>
+    </div>
   </div>
-<% end %>
-<%= yield %>
+
+  <div class="container main">
+    <% flash.each do |name,msg| %>
+      <div class="flash_<%=name%>">
+        <%= msg %>
+      </div>
+    <% end %>
+    
+    <%= yield %>
+  </div>
 
 </body>
 </html>
